--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
             Password: <input type="password" name="pwd"/><br/><br/>
             Search: <input type="search"/><br/><br/>
             Time: <input type="Time"/><br/><br/>
-            Telephone
+            Telephone: <input type="tel"/><br/><br/>
+            Website: <input type="URL"/><br/><br/>
+            Week: <input type="week"/><br/><br/>
+            Color: <input type="color"/><br/><br/>
+            Date: <input type="date"/><br/><br/>
+            Email: <input type="email"/><br/><br/>
+            File: <input type="file"/><br/><br/>
+            Range: <input type="range"/><br/><br/>
+            Image: <input type="image"/><br/><br/>
+            Month: <input type="month"/><br/><br/>
+            Number: <input type="number"/><br/><br/>
+            <input type="button" value="okay"/><br/><br/>
+            <input type="submit"/><br/><br/>
+            <input type="reset"/><br/><br/>
         </form>
     </body>
 </head>
